syntax = "proto2";

package proto;

import "Player.proto";

option java_package = "proto";
option java_outer_classname = "Message";


message MessageChat {
    required string text = 1;
}

message MessageWrapper {
    enum MessageType {
        CHAT = 1;
        PLAYER_CONNECTION = 2;
    }

    required MessageType type = 1;

    required int32 code = 2; //unique message code
    required int64 timestamp = 3; //server time

    oneof body {
        MessageChat chat = 4;
        PlayerConnection player = 5;
    }
}
